--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "slim/twig-view": "3.0.0-alpha",
         "guzzlehttp/guzzle": "^6.4",
         "illuminate/database": "~5.1",
-        "symfony/var-dumper": "^4.3"
+        "symfony/var-dumper": "^4.3",
+        "vlucas/valitron": "^1.4",
+        "slim/flash": "^0.4.0"
     },
     "autoload": {
         "psr-4": {
